<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/padding_12"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/mylogo">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in to your account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_20sdp"-->
<!--            android:text="@string/login_to_continue"-->
<!--            android:textColor="@color/secondary_text"-->
<!--            android:textSize="@dimen/_12ssp"-->
<!--            android:textStyle="bold"-->
<!--            />-->

        <TextView
            android:id="@+id/erreur_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:text="test"
            android:layout_marginTop="@dimen/_50sdp"
            android:visibility="invisible"

            />



<!--        <EditText-->
<!--            android:id="@+id/inputEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_45sdp"-->
<!--            android:layout_marginTop="@dimen/_5sdp"-->
<!--            android:background="@drawable/background_input"-->
<!--            android:hint="@string/input_email_hunt"-->
<!--            android:textColorHint="@color/secondary_text"-->
<!--            android:imeOptions="actionNext"-->
<!--            android:importantForAutofill="no"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:paddingStart="@dimen/_16sdp"-->
<!--            android:paddingEnd="@dimen/_16sdp"-->
<!--            android:textColor="@color/primary_text"-->
<!--            android:textSize="@dimen/_13ssp"-->

<!--            />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColorHint="@color/main_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"

                android:id="@+id/inputEmail"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/input_email_hunt"
                android:textColorHint="@color/secondary_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/erreur_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:text="test"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="invisible"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColorHint="@color/main_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"

            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/input_password_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_in"
                android:background="@drawable/shape"

                />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

        </FrameLayout>



        <TextView
            android:id="@+id/texCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="Don't have account?"
            android:textColor="@color/main_gray"
            android:textSize="13sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</ScrollView>